--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,6 +61,63 @@
     font-size: 12pt;
     padding: 40px 0 20px;
   }
+
+  .page-no-home__expert {
+    padding-bottom: 24px;
+  }
+  .page-no-home__expert .page-no-home__expert-box {
+    margin-bottom: 24px;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child.text-left {
+    padding-left: 0;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child.text-right {
+    padding-right: 0;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box__alone-content {
+    padding: 0;
+  }
+
+  .investment-principles .investment-principles__box1 .investment-principles__box1-icon {
+    top: -60px;
+    left: 40px;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-icon img {
+    width: 100px;
+    height: auto;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-img {
+    right: 24px;
+    width: 430px;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-img img {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-text .investment-principles__box1-content {
+    width: 67%;
+    padding: 40px 0;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-text .investment-principles__box1-content p {
+    margin-bottom: 20px;
+    text-align: justify;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-text .investment-principles__box1-content p:last-child {
+    margin-bottom: 0;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:first-child {
+    right: -24px;
+    width: 450px;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:first-child img {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:last-child {
+    width: 60%;
+    padding: 40px 0;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child .investment-principles__box3-child-content p {
+    text-align: justify;
+  }
 }
 @media (max-width: 1200.98px) {
   html,
@@ -606,6 +663,95 @@ body {
   #footer .footer-box .footer-box__text {
     margin-bottom: 24px;
   }
+
+  .page-no-home__expert {
+    /*padding-bottom: 30px;*/
+  }
+  .page-no-home__expert .page-no-home__expert-box {
+    margin-bottom: 24px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child {
+    width: 100%;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-title h3 {
+    font-size: 24pt;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-title h4 {
+    font-size: 24pt;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-content p {
+    margin-bottom: 16px;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-content p:last-child {
+    margin-bottom: 16px;
+  }
+
+  .investment-principles .investment-principles__box1 .investment-principles__box1-img {
+    position: unset;
+    width: 100%;
+    -webkit-transform: unset;
+            transform: unset;
+    text-align: center;
+    padding-top: 32px;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-img img {
+    width: 70%;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-text .investment-principles__box1-content {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:first-child {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 32px;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:first-child img {
+    width: 60%;
+    height: auto;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child h3 {
+    text-align: center;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:first-child {
+    position: unset;
+    width: 100%;
+    -webkit-transform: unset;
+            transform: unset;
+    text-align: center;
+    padding-top: 32px;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:first-child img {
+    width: 60%;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:last-child {
+    width: 100%;
+    padding: 40px 0;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child h3 {
+    text-align: center;
+  }
+  .investment-principles .investment-principles__box4 .investment-principles__box4-title img {
+    width: 140px;
+    height: auto;
+  }
 }
 @media (max-width: 768.99px) {
   #vntop {
@@ -1023,6 +1169,150 @@ body {
     width: 40px;
     height: 42px;
   }
+
+  .page-no-home {
+    padding-top: 32px;
+  }
+
+  .page-no-home__expert {
+    padding-bottom: 0;
+  }
+  .page-no-home__expert .page-no-home__expert-box {
+    margin-bottom: 24px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child {
+    width: 100%;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-title {
+    text-align: center;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-title h3 {
+    font-size: 20pt;
+    margin-bottom: 12px;
+  }
+  .page-no-home__expert .page-no-home__expert-box .page-no-home__expert-box-child .page-no-home__expert-title h4 {
+    font-size: 16pt;
+    padding-top: 24px;
+  }
+
+  .investment-principles .investment-principles__title h3 {
+    font-size: 20pt;
+    margin-bottom: 12px;
+  }
+  .investment-principles .investment-principles__title p {
+    padding-top: 14px;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-icon {
+    right: 0;
+    top: 0;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-icon img {
+    width: 40px;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-img {
+    position: unset;
+    width: 100%;
+    -webkit-transform: unset;
+            transform: unset;
+    text-align: center;
+    padding-top: 32px;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-img img {
+    width: 70%;
+  }
+  .investment-principles .investment-principles__box1 .investment-principles__box1-text .investment-principles__box1-content {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box2 {
+    padding: 40px 0;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:first-child {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 32px;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:first-child img {
+    width: 60%;
+    height: auto;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child h3 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child p {
+    margin-bottom: 16px;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent2 {
+    margin-top: 16px;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent2 p {
+    margin-bottom: 16px;
+  }
+  .investment-principles .investment-principles__box3 {
+    padding: 0 0 20px;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child:last-child {
+    width: 100%;
+    padding: 20px 0;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child h3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child .investment-principles__box3-child-content p {
+    margin-bottom: 16px;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child .investment-principles__box3-child-content p:last-child {
+    margin-bottom: 0;
+  }
+  .investment-principles .investment-principles__box4 {
+    padding: 32px 0 20px;
+  }
+  .investment-principles .investment-principles__box4 .investment-principles__box4-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .investment-principles .investment-principles__box4 .investment-principles__box4-title img {
+    width: 120px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  .investment-principles .investment-principles__box4 .investment-principles__box4-title h3 {
+    font-size: 20pt;
+    text-align: center;
+    margin-left: 0;
+  }
+  .investment-principles .investment-principles__box4 p {
+    text-align: center;
+    margin-top: 20px;
+  }
 }
 @media (max-width: 384.99px) {
   #footer {
@@ -1033,5 +1323,24 @@ body {
   }
   #footer .footer-box .footer-box__address .footer-box__address-child img {
     width: 16px;
+  }
+
+  .investment-principles .investment-principles__title h3 {
+    font-size: 16pt;
+    margin-bottom: 12px;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child {
+    width: 100%;
+  }
+  .investment-principles .investment-principles__box2 .investment-principles__box2-parent .investment-principles__box2-child:last-child h3 {
+    font-size: 16pt;
+  }
+  .investment-principles .investment-principles__box3 .investment-principles__box3-parent .investment-principles__box3-child h3 {
+    font-size: 16pt;
+  }
+  .investment-principles .investment-principles__box4 .investment-principles__box4-title h3 {
+    font-size: 16pt;
+    text-align: center;
+    margin-left: 0;
   }
 }
