--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -113,6 +113,80 @@ $gray: #e7edf8;
         padding: 40px 0 20px;
 
     }
+    .page-no-home__expert {
+		padding-bottom: 24px;
+	    .page-no-home__expert-box {
+	        
+	        margin-bottom: 24px;
+	        .page-no-home__expert-box-child {
+	            &.text-left {
+	            	padding-left: 0;
+	            }
+	            &.text-right {
+	            	padding-right: 0;
+	            }
+	        }
+	        .page-no-home__expert-box__alone-content {
+	        	padding: 0;
+	        }
+	    }
+	}
+	.investment-principles {
+		.investment-principles__box1 {
+			.investment-principles__box1-icon {
+				top: -60px;
+				left: 40px;
+				img {
+					width: 100px;
+					height: auto;
+				}
+			}
+			.investment-principles__box1-img {
+				right: 24px;
+				width: 430px;
+				img {
+					width: 100%;
+				}
+			}
+			.investment-principles__box1-text {
+				.investment-principles__box1-content {
+					width: 67%;
+					padding: 40px 0;
+					p {
+						margin-bottom: 20px;
+						text-align: justify;
+						&:last-child {
+							margin-bottom: 0;
+						}
+					}
+				}
+			}
+		}
+	
+		.investment-principles__box3 {
+			.investment-principles__box3-parent {
+				.investment-principles__box3-child {
+					&:first-child {
+						right: -24px;
+						width: 450px;
+						img {
+							width: 100%;
+						}
+
+					}
+					&:last-child {
+						width: 60%;
+						padding: 40px 0;
+					}
+					.investment-principles__box3-child-content {
+						p {
+							text-align: justify;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 
@@ -887,6 +961,110 @@ $gray: #e7edf8;
 
         }
     }
+    .page-no-home__expert {
+		/*padding-bottom: 30px;*/
+	    .page-no-home__expert-box {
+	        margin-bottom: 24px;
+	        flex-wrap: wrap;
+	        .page-no-home__expert-box-child {
+	            width: 100%;
+	            .page-no-home__expert-title {
+
+	                h3 {
+	                    font-size: 24pt;
+	                }
+
+	                h4 {
+	                    font-size: 24pt;
+	                }
+	            }
+	            .page-no-home__expert-content {
+	            	p {
+	            		margin-bottom: 16px;
+	            		&:last-child {
+	            			margin-bottom: 16px;
+	            		}
+	            	}
+	            }
+	        }
+	    }
+	}
+	.investment-principles {
+		.investment-principles__box1 {
+			.investment-principles__box1-img {
+				position: unset;
+				width: 100%;
+				transform: unset;
+				text-align: center;
+				padding-top: 32px;
+				img {
+					width: 70%;
+				}
+			}
+			.investment-principles__box1-text {
+				.investment-principles__box1-content {
+					width: 100%;
+				}
+			}
+		}
+		.investment-principles__box2 {
+			.investment-principles__box2-parent {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				flex-wrap: wrap;
+				.investment-principles__box2-child {
+					&:first-child {
+						width: 100%;
+						text-align: center;
+						margin-bottom: 32px;
+						img {
+							width: 60%;
+							height: auto;
+						}
+					}
+					&:last-child {
+						width: 100%;
+						h3 {
+							text-align: center;
+						}
+					}
+				}
+			}
+		}
+		.investment-principles__box3 {
+			.investment-principles__box3-parent {
+				.investment-principles__box3-child {
+					&:first-child {
+						position: unset;
+						width: 100%;
+						transform: unset;
+						text-align: center;
+						padding-top: 32px;
+						img {
+							width: 60%;
+						}
+
+					}
+					&:last-child {
+						width: 100%;
+						padding: 40px 0;
+					}
+					h3 {
+						text-align: center;
+					}
+				}
+			}
+		}
+		.investment-principles__box4 {
+			.investment-principles__box4-title {
+				img {
+					width: 140px;
+					height: auto;
+				}
+			}
+		}
+	}
 }
 
 @media(max-width:768.99px) {
@@ -1051,6 +1229,7 @@ $gray: #e7edf8;
 
         }
     }
+    
 }
 
 @media(max-width:500.99px) {
@@ -1322,6 +1501,7 @@ $gray: #e7edf8;
                 }
             }
         }
+
     }
 
     $range-label-width: 40px !default;
@@ -1471,6 +1651,150 @@ $gray: #e7edf8;
     		height: 42px;
     	}
     }
+    .page-no-home {
+    	padding-top: 32px;
+    }
+    .page-no-home__expert {
+		padding-bottom: 0;
+	    .page-no-home__expert-box {
+	        margin-bottom: 24px;
+	        flex-wrap: wrap;
+	        .page-no-home__expert-box-child {
+	            width: 100%;
+	            .page-no-home__expert-title {
+	            	text-align: center;
+	                h3 {
+	                    font-size: 20pt;
+	                    margin-bottom: 12px;
+	                }
+
+	                h4 {
+	                    font-size: 16pt;
+	                    padding-top: 24px;
+	                }
+	            }
+	        }
+	    }
+	}
+	.investment-principles {
+		.investment-principles__title {
+	        h3 {
+	            font-size: 20pt;
+				margin-bottom: 12px;
+	        }
+	        p {
+	        	padding-top: 14px;
+	        }
+		}
+		.investment-principles__box1 {
+			.investment-principles__box1-icon {
+				right: 0;
+				top: 0;
+				img {
+					width: 40px;
+				}
+			}
+			.investment-principles__box1-img {
+				position: unset;
+				width: 100%;
+				transform: unset;
+				text-align: center;
+				padding-top: 32px;
+				img {
+					width: 70%;
+				}
+			}
+			.investment-principles__box1-text {
+				.investment-principles__box1-content {
+					width: 100%;
+				}
+			}
+		}
+		.investment-principles__box2 {
+			padding: 40px 0;
+			.investment-principles__box2-parent {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				flex-wrap: wrap;
+				.investment-principles__box2-child {
+					&:first-child {
+						width: 100%;
+						text-align: center;
+						margin-bottom: 32px;
+						img {
+							width: 60%;
+							height: auto;
+						}
+					}
+					&:last-child {
+						width: 100%;
+						h3 {
+							text-align: center;
+							font-size: 20px;
+							margin-bottom: 20px;
+						}
+						p {
+							margin-bottom: 16px;
+						}
+					}
+				}
+			}
+			.investment-principles__box2-parent2 {
+				margin-top: 16px;
+				p {
+					margin-bottom: 16px;
+				}
+			}
+		}
+		.investment-principles__box3 {
+			padding: 0 0 20px;
+			.investment-principles__box3-parent {
+				.investment-principles__box3-child {
+					&:last-child {
+						width: 100%;
+						padding: 20px 0;
+					}
+					h3 {
+						font-size: 20px;
+						margin-bottom: 20px;
+					}
+					.investment-principles__box3-child-content {
+					p {
+						margin-bottom: 16px;
+						&:last-child {
+							margin-bottom: 0;
+						}
+					}
+				}
+				}
+			}
+		}
+		.investment-principles__box4 {
+			padding: 32px 0 20px;
+			.investment-principles__box4-title {
+				display: flex;
+				align-items: center;
+				flex-wrap: wrap;
+				img {
+					width: 120px;
+					height: auto;
+					display: block;
+					margin: 0 auto;
+					margin-bottom: 20px;
+				}
+				h3 {
+					font-size: 20pt;
+					text-align: center;
+					margin-left: 0;
+				}
+			}
+			p {
+				text-align: center;
+				margin-top: 20px;
+			}
+		}
+	}
 }
 
 @media(max-width:384.99px) {
@@ -1498,4 +1822,44 @@ $gray: #e7edf8;
 
         }
     }
+    .investment-principles {
+		.investment-principles__title {
+	        h3 {
+	            font-size: 16pt;
+				margin-bottom: 12px;
+	        }
+		}
+		
+		.investment-principles__box2 {
+			.investment-principles__box2-parent {
+				.investment-principles__box2-child {
+					
+					&:last-child {
+						width: 100%;
+						h3 {
+							font-size: 16pt;
+						}
+					}
+				}
+			}
+		}
+		.investment-principles__box3 {
+			.investment-principles__box3-parent {
+				.investment-principles__box3-child {
+					h3 {
+						font-size: 16pt;
+					}
+				}
+			}
+		}
+		.investment-principles__box4 {
+			.investment-principles__box4-title {
+				h3 {
+					font-size: 16pt;
+					text-align: center;
+					margin-left: 0;
+				}
+			}
+		}
+	}
 }
