--- a/css/main.css
+++ b/css/main.css
@@ -1003,6 +1003,7 @@ p {
   width: 100%;
   max-width: 1100px;
   display: none;
+  z-index: 99;
 }
 #header .container .header-box .main-nav ul li .submenu .submenu-box {
   padding: 40px;
