--- a/css/main.scss
+++ b/css/main.scss
@@ -933,7 +933,7 @@ p {
                             width: 100%;
                             max-width: 1100px;
                             display: none;
-
+                            z-index: 99;
                             .submenu-box {
                                 padding: 40px;
                                 display: flex;
